Test de nuevas comprobaciones

--- a/oaw_2017_2018/portal/profiles/desarrollo/check.descriptions.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/check.descriptions.properties
@@ -430,3 +430,27 @@ check.458.rationale = <p>Debe evitarse la presencia de enlaces rotos en la p\u00
 # [MODIFICADA] Enlaces adyacentes al mismo recurso deben estar combinados 
 check.180.error = Enlaces situados de forma contigua que apuntan al mismo destino.
 check.180.rationale = <p>La repetici\u00f3n de enlaces consecutivos a un mismo destino s\u00f3lo sirve para a\u00f1adir 'ruido' y contenido innecesario que entorpece la legibilidad y la interacci\u00f3n con la p\u00e1gina a determinados usuarios como a aquellos que emplean un lector de pantalla.</p><p>Es el caso, por ejemplo, del uso de im\u00e1genes situadas de forma contigua a enlaces textuales marc\u00e1ndose ambos como dos enlaces independientes en lugar de utilizar un \u00fanico enlace que englobe ambos elementos.</p>
+
+
+check.467.error = Error 467 Todos los elementos <code>img</code> tienen un atributo <code>alt</code> alternativo.
+check.467.rationale = Desc 467
+
+check.468.error = Error 468 Los textos alternativos de los elementos <code>img</code> no sean demasiado extensos.
+check.468.rationale = Desc 468
+
+check.469.error = Error 469 Encabezados WAI-ARIA vacios
+check.469.rationale = Desc 469
+
+check.470.error = Error 470 Existen encabedados WAI del mismo nivel seguidos sin contenido entre ellos
+check.470.rationale = Desc 470
+
+check.471.error = Error 471 No se saltan niveles de aria-level
+check.471.rationale = Desc 471
+
+check.472.error = Error 472 Un encabezado WAI aria-level=1 y más de x párrafos
+check.472.rationale = Desc 472
+
+
+
+
+
