--- a/oaw_2017_2018/portal/src/main/resources/intav.properties
+++ b/oaw_2017_2018/portal/src/main/resources/intav.properties
@@ -1,5 +1,5 @@
 # Rutas de ficheros de configuraci\u00F3n
-check.path = checks/checks.xml
+check.path = checks/checks-2017.xml
 
 complet.date.format = dd/MM/yyyy - HH:mm:ss
 simple.date.format = yyyy-MM-dd
