Cambios para gestionar redirecciones que responden con Location una URL no codificada
Relanzamiento de observatorios incompletos

--- a/oaw_2017_2018/portal/profiles/desarrollo/check.descriptions.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/check.descriptions.properties
@@ -450,7 +450,10 @@ check.471.rationale = Desc 471
 check.472.error = Error 472 Un encabezado WAI aria-level=1 y más de x párrafos
 check.472.rationale = Desc 472
 
+check.473.error = Error 473 Elementos con role=\u201Dgroup\u201D o role=""radiogroup\u201D tienen un atributo aria-label o un atributo aria-labelledby.
+check.473.rationale = Desc 473
 
-
+check.474.error = Error 474 Elemento con role=\u201Dlink\u201D o role="button" tenga un contenido textual, un atributo aria-label o un atributo aria-labelledby.
+check.474.rationale = Desc 474
 
 
