--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
@@ -3472,3 +3472,7 @@ conectividad.form.title = Comprobaci\u00F3n de URL
 conectividad.form.url = URL
 conectividad.url.comprobada = URL comprobada
 conectividad.url.comprobada.estado = Estado
+
+confirmacion.relanzar.observatorio.info = <strong>IMPORTANTE</strong> Esta operaci\u00F3n  s\u00F3lo debe realizarse en caso de que un observatorio falle durante su ejecuci\u00F3n. Aseg\u00FArese de que realmente se ha quedado incompleto porque si lo relanza estando el observatorio en ejecuci\u00F3n puede invalidar todo el observatorio. En cualquier caso, s\u00F3lo se lanzanr\u00E1n los rastreos que quedaron pendientes. 
+confirmacion.relanzar.observatorio.pregunta = \u00BFEst\u00E1 seguro que desea relanzar el observatorio? 
+mensaje.exito.relanzar.observatorio = Observatorio relanzado con \u00E9xito.
