--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
@@ -887,6 +887,7 @@ resultado.observatorio.rastreo.realizado.estado = Estado
 resultado.observatorio.rastreo.realizado.estado.lanzado = Lanzado
 resultado.observatorio.rastreo.realizado.estado.terminado = Terminado
 resultado.observatorio.rastreo.realizado.estado.error = Incompleto
+resultado.observatorio.rastreo.realizado.estado.relanzado = Relanzado
 resultado.observatorio.rastreo.realizado.resultados= Resultados individuales
 resultado.observatorio.rastreo.realizado.informe.agregado= Informe agregado
 resultado.observatorio.rastreo.realizado.informes.individuales = Informes individuales
