Test nuevos cambios en los checks

--- a/oaw_2017_2018/portal/src/main/resources/intav.properties
+++ b/oaw_2017_2018/portal/src/main/resources/intav.properties
@@ -1,8 +1,8 @@
 # Rutas de ficheros de configuraci\u00F3n
-check.path = checks/checks.xml
+#check.path = checks/checks.xml
 
 #Nuevo fichero de checks para cambios en metodologia
-#check.path = checks/checks-2017.xml
+check.path = checks/checks-2017.xml
 
 complet.date.format = dd/MM/yyyy - HH:mm:ss
 simple.date.format = yyyy-MM-dd
@@ -86,7 +86,7 @@ observatory.num.html.errors.limit = 5
 #2012
 observatory.zero.red.max.number = 1
 #2017
-#observatory.zero.red.max.number = 2
+observatory.zero.red.max.number.2017 = 2
 
 observatory.aspect.general = 1
 observatory.aspect.alternatives = 2
