Desarrollo nueva metodología: Modificados informes individuales generados para eliminar las referencias a niveles

--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources-2017.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources-2017.properties
@@ -617,7 +617,7 @@ resultados.anonimos.img.globales =  Resultados Globales
 resultados.anonimos.img.categorias = Por Categoria
 resultados.anonimos.img.comparativa =  Evoluci\u00F3n
 
-resultados.primarios.puntuaciones.verificacion1 = Puntuaciones Medias Prioridad 1.
+resultados.primarios.puntuaciones.verificacion1 = Puntuaciones Medias por Verificaci\u00F3n. Prioridad 1.
 resultados.primarios.puntuaciones.verificacion2 = Puntuaciones Medias por Verificaci\u00F3n. Prioridad 2.
 resultados.primarios.puntuacion.pagina = Resumen Comparativo del An\u00E1lisis de P\u00E1ginas.
 resultados.primarios.res.verificacion = Resultados por Verificaci\u00F3n
@@ -2852,11 +2852,11 @@ ob.resAnon.intav.report.342.p4 = Nivel I, Prioridad 2 (6 verificaciones)
 ob.resAnon.intav.report.342.p5 = Nivel II, Prioridad 1 (4 verificaciones)
 ob.resAnon.intav.report.342.p6 = Nivel II, Prioridad 2 (6 verificaciones)
 une2012.resAnon.intav.report.342.p1 = Para obtener de forma clara una visi\u00F3n general del grado de accesibilidad, se obtiene el nivel de adecuaci\u00F3n Parcial, Prioridad 1 o Prioridad 1 y 2 para las distintas m\u00E9tricas del observatorio: verificaci\u00F3n, nivel de an\u00E1lisis, p\u00E1gina y portal.
-une2012.resAnon.intav.report.342.p2 = Para facilitar la comprensi\u00F3n de esta valoraci\u00F3n, se dividen las 20 verificaciones en cuatro grupos de 7 \u00F3 3 verificaciones cada uno:
-une2012.resAnon.intav.report.342.p3 = Nivel I, Prioridad 1 (7 verificaciones)
-une2012.resAnon.intav.report.342.p4 = Nivel I, Prioridad 2 (3 verificaciones)
-une2012.resAnon.intav.report.342.p5 = Nivel II, Prioridad 1 (7 verificaciones)
-une2012.resAnon.intav.report.342.p6 = Nivel II, Prioridad 2 (3 verificaciones)
+une2012.resAnon.intav.report.342.p2 = Para facilitar la comprensi\u00F3n de esta valoraci\u00F3n, se dividen las 20 verificaciones en dos grupos de 14 \u00F3 6 verificaciones cada uno:
+une2012.resAnon.intav.report.342.p3 = Prioridad 1 (14 verificaciones)
+une2012.resAnon.intav.report.342.p4 = Prioridad 2 (6 verificaciones)
+#une2012.resAnon.intav.report.342.p5 = Nivel II, Prioridad 1 (7 verificaciones)
+#une2012.resAnon.intav.report.342.p6 = Nivel II, Prioridad 2 (3 verificaciones)
 
 ob.resAnon.intav.report.342.p7 = En primer lugar se obtiene el nivel de {0}, de acuerdo a las tablas de la metodolog\u00EDa expuestas en el punto anterior.
 ob.resAnon.intav.report.342.p7.bold = adecuaci\u00F3n de una verificaci\u00F3n (modalidad)
@@ -3477,3 +3477,6 @@ conectividad.url.comprobada.estado = Estado
 confirmacion.relanzar.observatorio.info = <strong>IMPORTANTE</strong> Esta operaci\u00F3n  s\u00F3lo debe realizarse en caso de que un observatorio falle durante su ejecuci\u00F3n. Aseg\u00FArese de que realmente se ha quedado incompleto porque si lo relanza estando el observatorio en ejecuci\u00F3n puede invalidar todo el observatorio. En cualquier caso, s\u00F3lo se lanzanr\u00E1n los rastreos que quedaron pendientes. 
 confirmacion.relanzar.observatorio.pregunta = \u00BFEst\u00E1 seguro que desea relanzar el observatorio? 
 mensaje.exito.relanzar.observatorio = Observatorio relanzado con \u00E9xito.
+
+
+pdf.resultpage.media=Puntuaci\u00F3n Media\nPrioridad {0}
