--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
@@ -3479,3 +3479,28 @@ confirmacion.relanzar.observatorio.pregunta = \u00BFEst\u00E1 seguro que desea r
 mensaje.exito.relanzar.observatorio = Observatorio relanzado con \u00E9xito.
 
 pdf.resultpage.media=Puntuaci\u00F3n Media\nNivel de An\u00E1lisis {0}
+
+# PAUTAS OBSERVATORIO UNE 2012 -B
+minhap.observatory.3_0.subgroup.1.1 = 1.1 Existencia de alternativas textuales
+minhap.observatory.3_0.subgroup.1.2 = 1.2 Uso de encabezados
+minhap.observatory.3_0.subgroup.1.3 = 1.3 Uso de listas
+minhap.observatory.3_0.subgroup.1.4 = 1.4 Tablas de datos
+minhap.observatory.3_0.subgroup.1.5 = 1.5 Agrupaci\u00F3n estructural
+minhap.observatory.3_0.subgroup.1.6 = 1.6 Separaci\u00F3n de contenido y presentaci\u00F3n
+minhap.observatory.3_0.subgroup.1.7 = 1.7 Identificaci\u00F3n del idioma principal
+minhap.observatory.3_0.subgroup.2.1 = 2.1 Identificaci\u00F3n de los cambios de idioma
+minhap.observatory.3_0.subgroup.2.2 = 2.2 Contraste suficiente
+minhap.observatory.3_0.subgroup.2.3 = 2.3 Secci\u00F3n de accesibilidad
+minhap.observatory.3_0.subgroup.1.8 = 1.8 Navegaci\u00F3n con javascript accesible
+minhap.observatory.3_0.subgroup.1.9 = 1.9 Control de usuario
+minhap.observatory.3_0.subgroup.1.10 = 1.10 Formularios
+minhap.observatory.3_0.subgroup.1.11 = 1.11 T\u00EDtulo de p\u00E1gina y de marcos
+minhap.observatory.3_0.subgroup.1.12 = 1.12 Enlaces descriptivos
+minhap.observatory.3_0.subgroup.1.13 = 1.13 Cambios de contexto
+minhap.observatory.3_0.subgroup.1.14 = 1.14 Compatibilidad
+minhap.observatory.3_0.subgroup.2.4 = 2.4 M\u00FAltiples v\u00EDas de navegaci\u00F3n
+minhap.observatory.3_0.subgroup.2.5 = 2.5 Foco del teclado
+minhap.observatory.3_0.subgroup.2.6 = 2.6 Navegaci\u00F3n consistente
+
+observatorio.puntuacion.prioridad.1 = Puntuaci\u00F3n Media Prioridad 1
+observatorio.puntuacion.prioridad.2 =  Puntuaci\u00F3n Media Prioridad 2
