Desarrollo nueva metodología
Servicio de diagnóstico: añadidas comprobaciones adicionales en histórico para no mezclar metodologías

Refactorización de código

--- a/oaw_2017_2018/portal/profiles/integracion/crawler.properties
+++ b/oaw_2017_2018/portal/profiles/integracion/crawler.properties
@@ -84,9 +84,9 @@ export.open.office.template.une.2004.EELL = ${deploy.path}/WEB-INF/templatesODT/
 export.open.office.template.une.2012.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA_UNE_2012_embed.odt
 export.open.office.template.une.2012.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE_UNE_2012_embed.odt
 export.open.office.template.une.2012.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL_UNE_2012.odt
-export.open.office.template.une.2017.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA_UNE_2017_embed.odt
-export.open.office.template.une.2017.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE_UNE_2017_embed.odt
-export.open.office.template.une.2017.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL_UNE_2017.odt
+export.open.office.template.une.2012b.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA_UNE_2012_B_embed.odt
+export.open.office.template.une.2012b.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE_UNE_2012_B_embed.odt
+export.open.office.template.une.2012b.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL_UNE_2012_B.odt
 
 export.open.office = ${files.path}/exports/openOffice/
 
