--- a/oaw_2017_2018/portal/src/main/resources/intav.properties
+++ b/oaw_2017_2018/portal/src/main/resources/intav.properties
@@ -17,7 +17,7 @@
 #check.path = checks/checks.xml
 
 #Nuevo fichero de checks para cambios en metodologia
-check.path = checks/checks-2017.xml
+check.path = checks/checks-2012-b.xml
 
 complet.date.format = dd/MM/yyyy - HH:mm:ss
 simple.date.format = yyyy-MM-dd
