--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
@@ -516,6 +516,7 @@ datos.acceso = Datos de acceso
 copyright = Copyright \u00A9 2017 - <span class="negrita">Ministerio de Hacienda y Funci\u00F3n P\u00FAblica</span>
 boton.aceptar = Aceptar
 boton.buscar = Buscar
+boton.limpiar = Limpiar
 boton.cancelar = Cancelar
 boton.volver = Volver
 boton.volver.alt = Volver
