--- a/oaw_2017_2018/oaw/pom.xml
+++ b/oaw_2017_2018/oaw/pom.xml
@@ -1,15 +1,13 @@
-<!--
-Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública, 
-This program is licensed and may be used, modified and redistributed under the terms
-of the European Public License (EUPL), either version 1.2 or (at your option) any later 
-version as soon as they are approved by the European Commission.
-Unless required by applicable law or agreed to in writing, software distributed under the 
-License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF 
-ANY KIND, either express or implied. See the License for the specific language governing 
-permissions and more details.
-You should have received a copy of the EUPL1.2 license along with this program; if not, 
-you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863
--->
+<!-- Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública, 
+	This program is licensed and may be used, modified and redistributed under 
+	the terms of the European Public License (EUPL), either version 1.2 or (at 
+	your option) any later version as soon as they are approved by the European 
+	Commission. Unless required by applicable law or agreed to in writing, software 
+	distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
+	WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the 
+	License for the specific language governing permissions and more details. 
+	You should have received a copy of the EUPL1.2 license along with this program; 
+	if not, you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -103,6 +101,14 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
 			<properties>
 				<profile.name>integracion</profile.name>
 				<deploy.path>/opt/apache-tomcat-7.0.54/webapps/oaw</deploy.path>
+				<files.path>/tmp/oaw/files</files.path>
+			</properties>
+		</profile>
+		<profile>
+			<id>docker</id>
+			<properties>
+				<profile.name>docker</profile.name>
+				<deploy.path>/usr/local/tomcat/webapps/oaw</deploy.path>
 				<files.path>/tmp/oaw/files</files.path>
 			</properties>
 		</profile>
