Correción de cadenas de texto en informes individuales

--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -1182,7 +1182,7 @@ minhap.observatory.3_0.subgroup.1.4  = 1.4 Tablas de datos
 minhap.observatory.3_0.subgroup.1.5  = 1.5 Agrupaci\u00F3n estructural
 minhap.observatory.3_0.subgroup.1.6  = 1.6 Separaci\u00F3n de contenido y presentaci\u00F3n
 minhap.observatory.3_0.subgroup.1.7  = 1.7 Identificaci\u00F3n del idioma principal
-minhap.observatory.3_0.subgroup.1.8  = 1.8 Navegaci\u00F3n con javascript accesible
+minhap.observatory.3_0.subgroup.1.8  = 1.8 Navegaci\u00F3n con javascript accesible y control de usuario
 minhap.observatory.3_0.subgroup.1.9  = 1.9 Formularios y etiquetas
 minhap.observatory.3_0.subgroup.2.1  = 2.1 Identificaci\u00F3n de los cambios de idioma
 minhap.observatory.3_0.subgroup.2.2  = 2.2 Contraste suficiente
@@ -2937,7 +2937,7 @@ une2012.resAnon.intav.report.33.table.123.question    = \u00BFLa p\u00E1gina tie
 une2012.resAnon.intav.report.33.table.123.value       = 1;0;0
 une2012.resAnon.intav.report.33.table.211.answer      = No se emplea javascript en elementos de interacci\u00F3n;S\u00ED;No
 une2012.resAnon.intav.report.33.table.211.modality    = 1;1;0
-une2012.resAnon.intav.report.33.table.211.name        = Navegaci\u00F3n con Javascript accesible
+une2012.resAnon.intav.report.33.table.211.name        = Navegaci\u00F3n con Javascript accesible y control de usuario
 une2012.resAnon.intav.report.33.table.211.question    = \u00BFSe usa Javascript de forma independiente de dispositivo?
 une2012.resAnon.intav.report.33.table.211.value       = No punt\u00FAa;1;0
 une2012.resAnon.intav.report.33.table.212.answer      = S\u00ED;No
