--- a/oaw_2017_2018/portal/src/main/resources/basic.service.default.properties
+++ b/oaw_2017_2018/portal/src/main/resources/basic.service.default.properties
@@ -38,6 +38,8 @@ basic.service.width = La amplitud del rastreo (par\u00E1metro 'amplitud')
 basic.service.content = El c\u00F3digo fuente a analizar (par\u00E1metro 'codigo')
 basic.service.report.not.valid = El tipo de informe seleccionado no es v\u00E1lido, por favor escoja un tipo de informe en el formulario
 basic.service.url.or.content = Debe especificar una direcci\u00F3n a rastrear o un c\u00F3digo fuente a analizar.
+basic.service.url.size = La direcci\u00F3n o direcciones a rastrear superan el tamaño m\u00E1ximo de caracteres permitido que es 8000
+
 
 # Mensajes de la cola de peticiones
 basic.service.launched = El servicio b\u00E1sico ha sido lanzado. Cuando los resultados est\u00E9n listos, se le enviar\u00E1n los resultados al correo electr\u00F3nico que ha especificado.
