--- a/oaw_2017_2018/portal/profiles/desarrollo/pdf.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/pdf.properties
@@ -32,7 +32,8 @@ path.inteco.logo = ${deploy.path}/images/logo_inteco2.png
 path.inteco.logoH = ${deploy.path}/images/logo_inteco.png
 path.observatorio.logo = ${deploy.path}/images/observatorio_accesibilidad_logo.png
 path.observatorio.multilanguage.logo = ${deploy.path}/images/observatorio_multi_logo.png
-path.ministerio.logo = ${deploy.path}/images/mhfp.gif
+#path.ministerio.logo = ${deploy.path}/images/mhfp.gif
+path.ministerio.logo = ${deploy.path}/images/logo-mptfp.png
 path.images = ${deploy.path}/images/
 path.problem =  ${deploy.path}/images/problema.gif
 path.warnings =  ${deploy.path}/images/advertencia.gif
@@ -94,3 +95,5 @@ pdf.w3c.html.copyright = Copyright \u00A9 1994-2010 W3C \u00AE
 pdf.w3c.html.copyright.link = http://www.w3.org/Consortium/Legal/2002/ipr-notice-20021231#Copyright
 pdf.w3c.css.copyright = Copyright \u00A9 1994-2010 W3C \u00AE
 pdf.w3c.css.copyright.link =http\://www.w3.org/Consortium/Legal/2002/ipr-notice-20021231\#Copyright
+
+path.ministerio.logo.viejo = ${deploy.path}/images/mhfp.gif
