--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -62,7 +62,7 @@ anchor.PoMo      = pomoAnchor
 anchor.PuMe      = pumeAnchor
 anchor.met.table = mTAnchor
 
-anonymous.html.description                       = Resultados del Observatorio de Accesibilidad Web realizado por el Ministerio de Hacienda y Administraciones P\u00FAblicas en la fecha [{0}]
+anonymous.html.description                       = Resultados del Observatorio de Accesibilidad Web realizado por el Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica en la fecha [{0}]
 anonymous.html.footer                            = Informe de Observatorio de Accesibilidad Web: {0} ({1})
 anonymous.html.global.result.1.table.caption     = Porcentajes globales del nivel de adecuaci\u00F3n.
 anonymous.html.global.result.2.table.caption     = Comparaci\u00F3n de adecuaci\u00F3n por segmento.
@@ -75,7 +75,7 @@ anonymous.html.global.result.6.table.1.caption   = Aspectos.
 anonymous.html.global.result.6.table.2.caption   = Comparaci\u00F3n de medias orientadas a aspectos.
 anonymous.html.head.title                        = Informe de Observatorio de Accesibilidad Web: {0}
 anonymous.html.keywords                          = observatorio, accesibilidad, mpr, minhap, presidencia, politica territorial, une139803
-anonymous.html.logoMP.alt                        = Ministerio de Hacienda y Administraciones P\u00FAblicas
+anonymous.html.logoMP.alt                        = Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica
 anonymous.html.logoObs.alt                       = Observatorio de Accesibilidad Web
 anonymous.html.menu.conclusion                   = Conclusiones del Estudio
 anonymous.html.menu.evolutionResult              = Evoluci\u00F3n de resultados
@@ -384,7 +384,7 @@ confirmacion.relanzar.observatorio.pregunta               = \u00BFEst\u00E1 segu
 confirmar.borrar.certificado      = Confirmaci\u00F3n de borrado de certificado.
 confirmar.borrar.certificado.info = Si est\u00E1 seguro de que quiere eliminar este certificado, por favor, conf\u00EDrmelo a continuaci\u00F3n.
 
-copyright = Copyright \u00A9 2018 - <span class="negrita">Ministerio de Hacienda y Funci\u00F3n P\u00FAblica</span>
+copyright = Copyright \u00A9 2018 - <span class="negrita">Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica</span>
 
 cuenta.cliente.duplicada = Cuenta Cliente ya existente.
 
@@ -1191,7 +1191,7 @@ minhap.observatory.3_0.subgroup.2.4  = 2.4 M\u00FAltiples v\u00EDas de navegaci\
 minhap.observatory.3_0.subgroup.2.5  = 2.5 Foco del teclado
 minhap.observatory.3_0.subgroup.2.6  = 2.6 Navegaci\u00F3n consistente
 
-ministerio.logo.alt = MINHAFP - Ministerio de Hacienda y Funci\u00F3n P\u00FAblica
+ministerio.logo.alt = MINHAFP - Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica
 
 modality.fail = Falla
 modality.pass = Pasa
@@ -1462,7 +1462,7 @@ ob.resAnon.intav.report.1.p4                                            = El inf
 ob.resAnon.intav.report.1.p5                                            = El presente Estudio de Observatorio analizar\u00E1 el estado en que se encuentran los sitios web de las Administraciones P\u00FAblicas de Espa\u00F1a en cuanto al cumplimiento de los requisitos de accesibilidad exigidos legalmente (prioridad 1 y 2 de UNE 139803:2004). El estudio se realizar\u00E1 sobre los portales pertenecientes a la Administraci\u00F3n General del Estado y una selecci\u00F3n de sitios web de las Comunidades Aut\u00F3nomas y Entidades Locales.
 ob.resAnon.intav.report.11.p1                                           = La iniciativa del Observatorio de Accesibilidad Web se puso en marcha en el a\u00F1o 2010 prestando desde entonces diferentes servicios basados en el est\u00E1ndar UNE 139803:2004 (WCAG 1.0). Con la aprobaci\u00F3n del nuevo est\u00E1ndar 139803:2012 (WCAG 2.0) los servicios del observatorio se han actualizado para promover la aplicaci\u00F3n de este nuevo est\u00E1ndar.
 ob.resAnon.intav.report.11.p4                                           = La Secretar\u00EDa General de Administraci\u00F3n Digital, adscrita al {0} tiene entre sus funciones la promoci\u00F3n de la Administraci\u00F3n Digital mediante la realizaci\u00F3n de estudios y el dise\u00F1o y ejecuci\u00F3n t\u00E9cnica de programas de actuaci\u00F3n, la cooperaci\u00F3n con otras Administraciones p\u00FAblicas y el desarrollo y difusi\u00F3n de las herramientas y servicios comunes necesarios para ello.
-ob.resAnon.intav.report.11.p4.bold                                      = Ministerio de Hacienda y Funci\u00F3n P\u00FAblica a trav\u00E9s de la Secretar\u00EDa de Estado de Funci\u00F3n P\u00FAblica
+ob.resAnon.intav.report.11.p4.bold                                      = Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica a trav\u00E9s de la Secretar\u00EDa de Estado de Funci\u00F3n P\u00FAblica
 ob.resAnon.intav.report.11.p5                                           = Asimismo le corresponde la evaluaci\u00F3n de las actuaciones realizadas y la elaboraci\u00F3n de las recomendaciones necesarias, todo ello en el marco de las directrices que se establezcan por la Comisi\u00F3n de Estrategia TIC y por el Comit\u00E9 Sectorial de Administraci\u00F3n Electr\u00F3nica, a los cuales prestar\u00E1 apoyo t\u00E9cnico.
 ob.resAnon.intav.report.2.p1                                            = El {0} realiza un an\u00E1lisis del grado de cumplimiento en materia de accesibilidad de los portales de la Administraci\u00F3n General del Estado, de las Comunidades Aut\u00F3nomas y de las Entidades Locales, con el objetivo de ofrecer un informe de situaci\u00F3n que ayude a mejorar la accesibilidad de estos portales y centrar los esfuerzos futuros.
 ob.resAnon.intav.report.2.p1.bold                                       = Observatorio de Accesibilidad\u0009
