--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
@@ -29,7 +29,7 @@ application.title.config.malware = RASTREADOR WEB - Configuraci\u00F3n del cartu
 application.title.observatorio = RASTREADOR WEB - Observatorio
 application.title.diagnostico = RASTREADOR WEB - Servicio de Diagn\u00F3stico
 application.logo.alt = Observatorio de Accesibilidad Web
-ministerio.logo.alt = MINHAFP - Ministerio de Hacienda y Funci\u00F3n P\u00FAblica
+ministerio.logo.alt = MINHAFP - Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica
 
 date.format = (dd/mm/yyyy)
 
@@ -513,7 +513,7 @@ ubicacion.usuario = Esta usted en:
 pagina.login = P\u00E1gina de Login
 login.usuario = Login de Usuario
 datos.acceso = Datos de acceso
-copyright = Copyright \u00A9 2018 - <span class="negrita">Ministerio de Hacienda y Funci\u00F3n P\u00FAblica</span>
+copyright = Copyright \u00A9 2018 - <span class="negrita">Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica</span>
 boton.aceptar = Aceptar
 boton.buscar = Buscar
 boton.limpiar = Limpiar
@@ -2264,7 +2264,7 @@ ob.resAnon.intav.report.1.p5 = El presente Estudio de Observatorio analizar\u00E
 	#Secci\u00F3n 1
 ob.resAnon.intav.report.11.p1 = La iniciativa del Observatorio de Accesibilidad Web se puso en marcha en el a\u00F1o 2010 prestando desde entonces diferentes servicios basados en el est\u00E1ndar UNE 139803:2004 (WCAG 1.0). Con la aprobaci\u00F3n del nuevo est\u00E1ndar 139803:2012 (WCAG 2.0) los servicios del observatorio se han actualizado para promover la aplicaci\u00F3n de este nuevo est\u00E1ndar.
 ob.resAnon.intav.report.11.p4 = La Secretar\u00eda General de Administraci\u00f3n Digital, adscrita al {0} tiene entre sus funciones la promoci\u00f3n de la Administraci\u00f3n Digital mediante la realizaci\u00f3n de estudios y el dise\u00f1o y ejecuci\u00f3n t\u00e9cnica de programas de actuaci\u00f3n, la cooperaci\u00f3n con otras Administraciones p\u00fablicas y el desarrollo y difusi\u00f3n de las herramientas y servicios comunes necesarios para ello.
-ob.resAnon.intav.report.11.p4.bold = Ministerio de Hacienda y Funci\u00f3n P\u00fablica a trav\u00e9s de la Secretar\u00eda de Estado de Funci\u00f3n P\u00fablica
+ob.resAnon.intav.report.11.p4.bold = Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica a trav\u00e9s de la Secretar\u00eda de Estado de Funci\u00f3n P\u00fablica
 ob.resAnon.intav.report.11.p5 = Asimismo le corresponde la evaluaci\u00F3n de las actuaciones realizadas y la elaboraci\u00F3n de las recomendaciones necesarias, todo ello en el marco de las directrices que se establezcan por la Comisi\u00F3n de Estrategia TIC y por el Comit\u00E9 Sectorial de Administraci\u00F3n Electr\u00F3nica, a los cuales prestar\u00E1 apoyo t\u00E9cnico.
 ob.resAnon.intav.report.11.p1.bold =
 
@@ -3467,9 +3467,9 @@ anonymous.html.summary.table.aspects = Tabla resumen de aspectos.
 anonymous.html.summary.table = Datos correspondientes a la gr\u00E1fica: {0}
 anonymous.html.footer = Informe de Observatorio de Accesibilidad Web: {0} ({1})
 anonymous.html.head.title = Informe de Observatorio de Accesibilidad Web: {0}
-anonymous.html.description = Resultados del Observatorio de Accesibilidad Web realizado por el Ministerio de Hacienda y Administraciones P\u00FAblicas en la fecha [{0}]
+anonymous.html.description = Resultados del Observatorio de Accesibilidad Web realizado por el Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica en la fecha [{0}]
 anonymous.html.keywords = observatorio, accesibilidad, mpr, minhap, presidencia, politica territorial, une139803
-anonymous.html.logoMP.alt = Ministerio de Hacienda y Administraciones P\u00FAblicas
+anonymous.html.logoMP.alt = Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica
 anonymous.html.logoObs.alt = Observatorio de Accesibilidad Web
 
 observatory.servicio.diagnostico.url = http://administracionelectronica.gob.es/comunidades/accesibilidad
