--- a/oaw_2017_2018/crawler/profiles/docker/crawler.core.properties
+++ b/oaw_2017_2018/crawler/profiles/docker/crawler.core.properties
@@ -73,3 +73,6 @@ check.accessibility.default.entity = Inteco
 check.accessibility.default.guideline = wcag-1-0
 check.accessibility.default.level = aa
 check.accessibility.default.language = es
+
+renderer.proxy.host = proxy
+renderer.proxy.port = 18088
