--- a/oaw_2017_2018/crawler/profiles/desarrollo/crawler.core.properties
+++ b/oaw_2017_2018/crawler/profiles/desarrollo/crawler.core.properties
@@ -69,3 +69,6 @@ http.proxy.port = 8080
 inline.tags = ABBR;ACRONYM;B;BIG;CODE;CITE;DFN;EM;FONT;INS;LABEL;Q;S;SMALL;SPAN;STRIKE;STRONG;SUB;SUP;U
 
 max.num.descendants.to.serialize = 500
+
+renderer.proxy.host = localhost
+renderer.proxy.port = 18088
