--- a/oaw_2017_2018/portal/profiles/docker/crawler.core.properties
+++ b/oaw_2017_2018/portal/profiles/docker/crawler.core.properties
@@ -55,3 +55,6 @@ http.proxy.port = 8080
 inline.tags = ABBR;ACRONYM;B;BIG;CODE;CITE;DFN;EM;FONT;INS;LABEL;Q;S;SMALL;SPAN;STRIKE;STRONG;SUB;SUP;U
 
 max.num.descendants.to.serialize = 500
+
+renderer.proxy.host = proxy
+renderer.proxy.port = 18088
