--- a/oaw_2017_2018/portal/profiles/desarrollo/propertiesmanager.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/propertiesmanager.properties
@@ -37,3 +37,5 @@ key.basic.service.default=basic.service.properties
 file.basic.service.default=/basic.service.default.properties
 
 file.descriptions=file:///home/alvaro/Development/Projects/minhap/oaw_2017_2018/portal/profiles/desarrollo/check.descriptions.properties
+
+check.patterns.properties=file:///home/alvaro/Development/Projects/minhap/oaw_2017_2018/portal/profiles/desarrollo/check.patterns.properties
