--- a/oaw_2017_2018/portal/profiles/desarrollo/check.patterns.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/check.patterns.properties
@@ -75,3 +75,6 @@ check.446.regex.pattern.ca=\\bobligatori\\b|\\bobligat\\b|\\bobligats\\b|\\bexig
 check.446.regex.pattern.gl=\\bobrigatorio\\b|\\bobrigado\\b|\\besixido\\b|\\bpreciso\\b|\\brequirido\\b|\\bnecesario\\b|\\bindispensable\\b|\\bimprescindible\\b|\\bimperativo\\b|\\bopcional\\b|\\bvoluntario\\b
 check.446.regex.pattern.eu=\\bnahitaezkoa\\b|\\bbetebeharpekoa\\b|\\beskatuta\\b|\\bbeharrezkoa\\b|\\berrekeritua\\b|\\bezinbestekoa\\b|\\bagindua\\b|\\baukerakoa\\b|\\bboluntarioa\\b
 
+# Check 463
+check.446.regex.pattern=accessibility|accesibilidad|accesibilitat|accessibilitat|accesibilidade|accessibilité|eskuragarritasuna|erabilerraztasunaren|irisgarritasuna|erabilerraztasuna|Erabilerraztasun
+
