--- a/oaw_2017_2018/portal/profiles/desarrollo/log4j.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/log4j.properties
@@ -16,8 +16,8 @@
 log4j.rootLogger=WARN, console, rastreador
 log4j.logger.es.inteco.crawler.job.CrawlerJob=INFO, crawler
 log4j.logger.es.inteco.rastreador2.management=INFO, management
-log4j.logger.cz.vutbr.web.csskit=ERROR, rastreador
-log4j.logger.com.helger.css.handler.LoggingCSSParseExceptionHandler=FATAL, rastreador
+log4j.logger.cz.vutbr=FATAL, rastreador
+log4j.logger.com.helger=FATAL, rastreador
 log4j.logger.org.odftoolkit.odfdom.OdfXMLFactory = ERROR, rastreador
 
 log4j.appender.rastreador=org.apache.log4j.RollingFileAppender
