--- a/oaw_2017_2018/intavcore/src/main/resources/log4j.properties
+++ b/oaw_2017_2018/intavcore/src/main/resources/log4j.properties
@@ -1,4 +1,6 @@
 log4j.rootLogger=WARNING,file
+log4j.logger.cz.vutbr=FATAL, rastreador
+log4j.logger.com.helger=FATAL, rastreador
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 
