--- a/oaw_2017_2018/portal/profiles/desarrollo/log4j.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/log4j.properties
@@ -18,6 +18,8 @@ log4j.logger.es.inteco.crawler.job.CrawlerJob=INFO, crawler
 log4j.logger.es.inteco.rastreador2.management=INFO, management
 log4j.logger.cz.vutbr=FATAL, rastreador
 log4j.logger.com.helger=FATAL, rastreador
+log4j.logger.es.gob.oaw.css.checks=FATAL, rastreador
+log4j.logger.ca.utoronto=FATAL, rastreador
 log4j.logger.org.odftoolkit.odfdom.OdfXMLFactory = ERROR, rastreador
 
 log4j.appender.rastreador=org.apache.log4j.RollingFileAppender
