--- a/oaw_2017_2018/portal/profiles/desarrollo/crawler.core.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/crawler.core.properties
@@ -73,5 +73,6 @@ inline.tags = ABBR;ACRONYM;B;BIG;CODE;CITE;DFN;EM;FONT;INS;LABEL;Q;S;SMALL;SPAN;
 
 max.num.descendants.to.serialize = 500
 
+renderer.proxy.active = false
 renderer.proxy.host = localhost
 renderer.proxy.port = 18088
