--- a/oaw_2017_2018/portal/profiles/docker/log4j.properties
+++ b/oaw_2017_2018/portal/profiles/docker/log4j.properties
@@ -16,9 +16,11 @@
 log4j.rootLogger=WARN, console, rastreador
 log4j.logger.es.inteco.crawler.job.CrawlerJob=INFO, crawler
 log4j.logger.es.inteco.rastreador2.management=INFO, management
-log4j.logger.cz.vutbr.web.csskit=ERROR, console
-log4j.logger.com.helger.css.handler.LoggingCSSParseExceptionHandler=FATAL, console
-log4j.logger.org.odftoolkit.odfdom.OdfXMLFactory = ERROR, console
+log4j.logger.cz.vutbr=FATAL, rastreador
+log4j.logger.com.helger=FATAL, rastreador
+log4j.logger.es.gob.oaw.css.checks=FATAL, rastreador
+log4j.logger.ca.utoronto=FATAL, rastreador
+log4j.logger.org.odftoolkit.odfdom.OdfXMLFactory = ERROR, rastreador
 
 log4j.appender.rastreador=org.apache.log4j.RollingFileAppender
 log4j.appender.rastreador.File= ${catalina.base}/logs/rastreador.log
