--- a/oaw_2017_2018/portal/profiles/docker/propertiesmanager.properties
+++ b/oaw_2017_2018/portal/profiles/docker/propertiesmanager.properties
@@ -37,3 +37,5 @@ key.basic.service=basic.service.properties
 file.basic.service=file:///usr/local/tomcat/webapps/oaw/WEB-INF/classes/basic.service.properties
 
 file.descriptions=file:///usr/local/tomcat/webapps/oaw/WEB-INF/classes/check.descriptions.properties
+
+check.patterns.properties=file:///usr/local/tomcat/webapps/oaw/WEB-INF/classes/check.patterns.properties
