--- a/oaw_2017_2018/portal/profiles/docker/crawler.core.properties
+++ b/oaw_2017_2018/portal/profiles/docker/crawler.core.properties
@@ -56,5 +56,6 @@ inline.tags = ABBR;ACRONYM;B;BIG;CODE;CITE;DFN;EM;FONT;INS;LABEL;Q;S;SMALL;SPAN;
 
 max.num.descendants.to.serialize = 500
 
-renderer.proxy.host = proxy
+renderer.proxy.active = false
+renderer.proxy.host = localhost
 renderer.proxy.port = 18088
