--- a/oaw_2017_2018/portal/profiles/integracion/propertiesmanager.properties
+++ b/oaw_2017_2018/portal/profiles/integracion/propertiesmanager.properties
@@ -37,3 +37,5 @@ key.basic.service=basic.service.properties
 file.basic.service=file:///opt/usuarios/oaw/properties/basic.service.properties
 
 file.descriptions=file:///opt/usuarios/oaw/properties/check.descriptions.properties
+
+check.patterns.properties=file:///opt/usuarios/oaw/properties/check.patterns.properties
