Configuración del motor de Javascript desde la interfaz

--- a/oaw_2017_2018/intavcore/pom.xml
+++ b/oaw_2017_2018/intavcore/pom.xml
@@ -107,7 +107,8 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
         <dependency>
             <groupId>net.sourceforge.cssparser</groupId>
             <artifactId>cssparser</artifactId>
-            <version>0.9.14</version>
+            <!-- <version>0.9.14</version> -->
+            <version>0.9.26</version>
         </dependency>
 
         <dependency>
