--- a/oaw_2017_2018/portal/profiles/desarrollo/check.patterns.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/check.patterns.properties
@@ -6,6 +6,11 @@
 # * Los caracteres \ deben escaparse como \\
 ################################################################################################
 
+#Patrones de texto alternativo para niveles A, AA y AAA. Separados por , y con formato Java
+pattern.accesibility.alt.a=\\blevel\\s+a\\b,\\bnivell?\\s+a\\b, \\bwcag\\s+a\\b,\\baccesibilidad\\s+a\\b, \\bprioridad\\s+1\\b,\\bconformi(dad|tat)\\s+a\\b,\\bA\\s+\\(?simple\\s+A\\)?\\b,\\ba\\s+maila\\b,\\bReal\\s+Decreto\\s+1112\\/2018\\b,\\bEN\\s301\\s549\\b
+pattern.accesibility.alt.aa=\\blevel\\s+aa\\b,\\blevel\\s+double(\\s+|-)a\\b, \\bnivell?\\s+aa\\b,\\bnivell?\\s+doble(\\s+|-)a\\b, \\bwcag\\s+aa\\b,\\baccesibilidad\\s+aa\\b, \\bprioridad\\s+2\\b,\\bconformi(dad|tat)\\s+aa\\b,\\bconformi(dad|tat)\\s+.?doble(-|\\s+)a\\b,\\bAA\\s+\\(?doble\\s+A\\)?\\b, \\baa\\s+maila\\b,\\bdoble(\\s|-|_|\\/)a\\b,\\bReal\\s+Decreto\\s+1112\\/2018\\b,\\bEN\\s301\\s549\\b
+pattern.accesibility.alt.aaa=\\blevel\\s+aaa\\b,\\blevel\\s+triple(\\s+|-)a\\b, \\bnivell?\\s+aaa\\b,\\bnivell?\\s+triple(\\s|-)+a\\b, \\bwcag\\s+aaa\\b,\\baccesibilidad\\s+aaa\\b, \\bprioridad\\s+3\\b,\\bconformi(dad|tat)\\s+aaa\\b,\\bconformi(dad|tat)\\s+.?triple(-|\\s+)aa\\b,\\bAAA\\s+\\(?triple\\s+A\\)?\\b, \\baaa\\s+maila\\b,\\btriple(\\s|-|_|\\/)a\\b,\\bReal\\s+Decreto\\s+1112\\/2018\\b,\\bEN\\s301\\s549\\b
+
 # Check 100 Existen im\\u00E1genes cuyo atributo "alt" contiene el nombre del fichero
 check.100.regex.pattern.1      = ^imagen$$$|^dibujo$|^pintura$|^cuadro$|^figura$|^ilustraci\\u00F3n$|^foto$|^fotograf[\\u00ED|i]a$|^instant\\u00E1nea$|^retrato$|^captura$|^captura de pantalla$|^gr\\u00E1fico$|^gr\\u00E1fica$|^esquema$|^diagrama$|^miniatura$|^separador$|^espaciador$|^espacio$|^decorativa$|^ornamental$|^imagen decorativa$|^texto alternativo$|^descripci\\u00F3n$|^descripci\\u00F3n de la imagen$
 check.100.regex.pattern.2      = ^image$|^drawing$|^picture$|^painting$|^figure$|^illustration$|^photo$|^snapshot$|^snap$|^shot$|^shooting$|^photograph$|^photography$|^portrait$|^screenshot$|^graphic$|^graph$|^chart$|^diagram$|^scheme$|^diagram$|^thumb$|^thumbnail$|^separator$|^spacer$|^space$|^decorative$|^ornamental$|^decorative image$|^alternative text$|^description$|^image description$
