Nueva sección de evolutivo de la puntuación media por segmento en informes agregados
Actualizada la configuraciòn del docker del motor de javascript

--- a/oaw_2017_2018/motor-js/nginx/reverse.conf
+++ b/oaw_2017_2018/motor-js/nginx/reverse.conf
@@ -9,34 +9,29 @@ server {
     server_name proxy;
 
     location / {
-    
-		proxy_hide_header Content-Type;	
-   	
+			proxy_hide_header Content-Type;		
     	set $prerender 1;
+
+			if ($arg_url ~* '\.css') {
+				set $prerender 0;
+			}
 		
-		if ($arg_url ~* '\.css') {
-			set $prerender 0;
-		}
-		
-		resolver 192.168.4.9;
+			# Servidor de DNS
+			resolver 192.168.4.9;
     
-		if ($prerender = 1) {
-			add_header Content-Type "text/html";
-			set $prerender "renderer-server";
-			#rewrite .* /http://$host$request_uri? break;
-			#proxy_pass http://$prerender;
-			
-			proxy_pass http://$prerender/$arg_url;
-		}
+			if ($prerender = 1) {
+				add_header Content-Type "text/html";
+				set $prerender "renderer-server";
+				proxy_pass http://$prerender/$arg_url;
+			}
 		
-		if ($prerender = 0) {
-		 
-			add_header Content-Type "text/css";
-			# Vamos a la url que nos pasan como parametro directamente
-			proxy_pass $arg_url;
-			
-        }
-    }
+			if ($prerender = 0) {
+				add_header Content-Type "text/css";
+				# Vamos a la url que nos pasan como parametro directamente
+				proxy_pass $arg_url;
+			}
+
+		}
  
 }
 
@@ -49,32 +44,29 @@ server {
     ssl_certificate_key /etc/nginx/ssl/server.key;
 
     location / {
-    
-		proxy_hide_header Content-Type;
-
+			proxy_hide_header Content-Type;
     	set $prerender 1;
 		
-		if ($request_uri ~* '.\css') {
-			set $prerender 0;
-		}
-		
-		resolver 192.168.4.9;
+			if ($request_uri ~* '.\css') {
+				set $prerender 0;
+			}
+			
+			# Servidor de DNS
+			resolver 192.168.4.9;
     
-		if ($prerender = 1) {
-			add_header Content-Type "text/html";
-			set $prerender "renderer-server";
-			rewrite .* /https://$host$request_uri? break;
-			proxy_pass http://$prerender;
-			
-			#proxy_pass http://$prerender/$arg_url;
-		}
+			if ($prerender = 1) {
+				add_header Content-Type "text/html";
+				set $prerender "renderer-server";
+				rewrite .* /https://$host$request_uri? break;
+				proxy_pass http://$prerender;
+			}
 		
-		if ($prerender = 0) {
-			add_header Content-Type "text/css";
-			# Vamos a la url que nos pasan como parametro directamente
-			proxy_pass https://$host$request_uri?;
+			if ($prerender = 0) {
+				add_header Content-Type "text/css";
+				# Vamos a la url que nos pasan como parametro directamente
+				proxy_pass https://$host$request_uri?;
 			
-        }
+      }
     }
  
 }
