--- a/oaw_2017_2018/motor-js/docker-compose.yml
+++ b/oaw_2017_2018/motor-js/docker-compose.yml
@@ -1,28 +1,43 @@
-renderer:
+renderer_1:
   privileged: true
   build: ./renderer
-  scale: 3
-  cpus: 2
   restart: always
   shm_size: '1gb'
   command: node /opt/prerender/server.js
-    
+
+renderer_2:
+  privileged: true
+  build: ./renderer
+  restart: always
+  shm_size: '1gb'
+  command: node /opt/prerender/server.js  
+
+renderer_3:
+  privileged: true
+  build: ./renderer
+  restart: always
+  shm_size: '1gb'
+  command: node /opt/prerender/server.js
+
 proxy:
   build: ./proxy
   ports:
     - "18088:18088"         
   command: node /opt/proxy/index.js
   restart: always
+  links:
+    - nginx  
   container_name: tawdis_proxy   
 
 nginx:
-  image: nginx:1.13.8-alpine      
+  build: ./nginx
   volumes:
     - ./nginx/reverse.conf:/etc/nginx/conf.d/default.conf
     - ./nginx/certs/server.crt:/etc/nginx/ssl/server.crt
     - ./nginx/certs/server.key:/etc/nginx/ssl/server.key        
   links:
-    - mysql
-    - renderer
-   restart: always
-   container_name: tawdis_nginx
+    - renderer_1
+    - renderer_2
+    - renderer_3        
+  restart: always
+  container_name: tawdis_nginx
