--- a/oaw_2017_2018/portal/pom.xml
+++ b/oaw_2017_2018/portal/pom.xml
@@ -192,6 +192,12 @@
 			<version>1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+		</dependency>
+
 
 	</dependencies>
 
