--- a/oaw_2017_2018/oaw/pom.xml
+++ b/oaw_2017_2018/oaw/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>es.minhap.oaw</groupId>
 	<artifactId>oaw</artifactId>
-	<version>4.3.0-SNAPSHOT-1</version>
+	<version>4.3.1</version>
 	<packaging>pom</packaging>
 
 	<name>oaw</name>
